tests/snapshots/bits_2_bits__anm12_unknown_signature.snap
---
source: tests/bits_2_bits.rs
expression: s
---
#pragma mapfile "tests/bits-2-bits/th12-unknown-signature.anmm"

entry {
    path: "subdir/file1.png",
    has_data: false,
    width: 1000,
    height: 1000,
    offset_x: 0,
    offset_y: 0,
    format: 3,
    colorkey: 0,
    memory_priority: 0,
    low_res_scale: false,
    sprites: {sprite0: {id: 0, x: 1.0, y: 1.0, w: 111.0, h: 111.0}},
}


script 0 script0 {
    hasNameButNoSignature(@mask=0b101, @args="00501c46 00000040 00541c46");
    ins_1011(@mask=0b101, @args="00501c46 00000040 00541c46");
}

