tests/snapshots/bits_2_bits__std08_2loops_1label.snap
---
source: tests/bits_2_bits.rs
expression: s
---
#pragma mapfile "map/any.stdm"

meta {
    unknown: 0,
    stage_name: "dm",
    bgm: [
        {path: "bgm/th08_08.mid", name: "dm"},
        {path: "bgm/th08_09.mid", name: "dm"},
        {path: " ", name: " "},
        {path: " ", name: " "},
    ],
    objects: {},
    instances: [],
}


script main {
    loop {
        loop {
            pos(0.0, 0.0, 0.0);
        }
        pos(0.0, 0.0, 0.0);
    }
}

